--- a/README.rdoc
+++ b/README.rdoc
@@ -5,10 +5,17 @@ Puretouch é uma re-implementação da interface do Puredata utilizando o framew
 == Install
 
 $ git clone http://github.com/tito/pymt.git
+
 $ cd pymt/
+
 $ sudo python setup.py install
+
 $ cd ../
+
 $ git clone http://github.com/alfakini/puretouch.git
+
 $ cd puretouch/
+
 $ git clone http://github.com/automata/topd.git
 
+www.musa.cc
